# simple-ml-project

./: .bhklab-template-builder-answers.yml  .gitignore  CHANGELOG.md  README.md  mkdocs.yaml  pixi.toml  pyproject.toml
src/simple_ml_project/: inference.py  model.py  train.py  utils.py
src/simple_ml_project/cli/: __init__.py  commands.py  entry_point.py
workflow/scripts/: benchmark_gpu.py  infer.sh  train.sh
